Проверка лампочки на вкл/выкл

--- a/smarthome_kvant/remote_control/static/CSS/led_1.css
+++ b/smarthome_kvant/remote_control/static/CSS/led_1.css
@@ -17,13 +17,11 @@
     top: calc(50% - 40px);
 }
 
-.temperature {
-    border: 1px solid black;
-    border-radius: 30px;
+.Led{
     width: 250px;
     height: 250px;
     position: absolute;
-    top: 0;
+    top: -100px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -31,36 +29,14 @@
     margin: auto;
 }
 
-.led_1 {
-    border: 1px solid black;
-    border-radius: 30px;
-    width: 250px;
-    height: 250px;
+.btn{
+    width: 200px;
+    height: 50px;
     position: absolute;
-    top: 0;
+    top: 250px;
     bottom: 0;
     left: 0;
     right: 0;
     padding: 10px;
     margin: auto;
-    margin-left: calc(25% - 200px);
-}
-
-.led_2 {
-    border: 1px solid black;
-    border-radius: 30px;
-    width: 250px;
-    height: 250px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    margin: auto;
-    margin-left: calc(75% - 75px);
-}
-
-body {
-    background-color: white;
 }
