--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <a href = "{% url 'led_1_site' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+    <a href = "{% url 'led_1' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
     <a class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
     <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
 {% endblock %}
