--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Smart Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class = "nav_bar">
@@ -11,5 +13,7 @@
     </header>
     {% block content %}
     {% endblock %}
+{% block f %}
+{% endblock %}
 </body>
 </html>
