--- a/smarthome_kvant/remote_control/static/CSS/led_1.css
+++ b/smarthome_kvant/remote_control/static/CSS/led_1.css
@@ -42,8 +42,8 @@
 }
 
 .pos{
-    width: auto;
-    height: auto;
+    width: 291px;
+    height: 100px;
     position: absolute;
     top: 400px;
     bottom: 0;
