--- a/smarthome_kvant/remote_control/static/CSS/led_1.css
+++ b/smarthome_kvant/remote_control/static/CSS/led_1.css
@@ -49,3 +49,14 @@ body{
     left: 47%;
     position: fixed;
 }
+.pos{
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 400px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    margin: auto;
+}
