--- a/smarthome_kvant/remote_control/static/CSS/style.css
+++ b/smarthome_kvant/remote_control/static/CSS/style.css
@@ -18,7 +18,7 @@
 }
 
 .temperature {
-    cursor: pointer;
+    cursor: default;
     outline: none;
     border: 1px solid black;
     border-radius: 30px;
