Недоделанный дизайн термометра

--- a/smarthome_kvant/remote_control/static/CSS/Led_1.css
+++ b/smarthome_kvant/remote_control/static/CSS/Led_1.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .nav_bar{
     width: 100%;
     position: absolute;
@@ -6,6 +10,20 @@
     line-height: 500%;
     background-color: #2196F3;
     font-size: 1em;
+}
+
+.home_btn{
+    background-color: #1976D2;
+    height: 50px;
+    width: 150px;
+    top: 30%;
+    margin-left: 40px;
+    position: absolute;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
 }
 
 .image{
@@ -40,6 +58,9 @@
     right: 0;
     padding: 10px;
     margin: auto;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 2px;
 }
 
 .pos{
