--- a/smarthome_kvant/remote_control/templates/Led_1.html
+++ b/smarthome_kvant/remote_control/templates/Led_1.html
@@ -1,9 +1,10 @@
-<link rel="stylesheet" href="/static/CSS/led_1.css">
+<link rel="stylesheet" href="/static/CSS/Led_1.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
     <h2 style="vertical-align: middle; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
-    <a href = "{% url 'home' %}">На главную</a>
+    <button class = "home_btn">На главную</button>
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
