--- a/smarthome_kvant/remote_control/static/CSS/Style.css
+++ b/smarthome_kvant/remote_control/static/CSS/Style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .nav_bar{
     width: 100%;
     position: absolute;
@@ -15,6 +19,20 @@
     position: absolute;
     right: 50px;
     top: calc(50% - 40px);
+}
+
+.home_btn{
+    background-color: #1976D2;
+    height: 50px;
+    width: 150px;
+    top: 30%;
+    margin-left: 40px;
+    position: absolute;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
 }
 
 .temperature {
