--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -9,7 +9,9 @@
         {% block header %}
         {% endblock %}
     </header>
-    {% block content %}
-    {% endblock %}
+    <div style = "position: fixed; width: 100%; height: 100%; margin: -8px; padding: 0; overflow-y: auto;">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
