Дизайн простой термометра (без бд)

--- a/smarthome_kvant/remote_control/templates/Led_1.html
+++ b/smarthome_kvant/remote_control/templates/Led_1.html
@@ -8,7 +8,7 @@
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
-{% block content %}>
+{% block content %}
     <script>
         if ( window.history.replaceState ) {
             window.history.replaceState( null, null, window.location.href );
