--- a/smarthome_kvant/remote_control/static/CSS/termometr.css
+++ b/smarthome_kvant/remote_control/static/CSS/termometr.css
@@ -37,25 +37,47 @@ body {
 }
 
 .temp{
-    height: 400px;
+    top: 200px;
+    height: 390px;
     width: 320px;
-    left: 14%;
-    position: absolute;
+    left: 5%;
+    position: fixed;
 }
 
 .btn{
+    outline: none;
+    cursor: pointer;
     border: solid 2px black;
     border-radius: 40px;
     padding: 30px 75px 30px 75px;
-    position: absolute;
-    left: 18%;
-    bottom: 40px;
+    position: fixed;
+    top: 600px;
+    left: 6.2%;
     font-size: 30px;
 }
 
-.cont{
-    width: 500px;
-    height: 550px;
-    top: 200px;
-    position: absolute;
+.temp_now{
+    position: fixed;
+    border: solid 1px black;
+    font-size: 40px;
+    width: 60%;
+    height: 50px;
+    top: 150px;
+    right: 40px;
+    padding: 30px 10px 30px 20px;
+    border-radius: 30px;
+}
+
+.table{
+    border-radius: 30px;
+    position: fixed;
+    top: 300px;
+    width: 50%;
+    right: 100px;
+}
+
+.item{
+    font-size: 20px;
+    text-align: center;
+    height: 75px;
 }
