--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/CSS/Termometr.css">
+<link rel="stylesheet" href="/static/CSS/termometr.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
@@ -9,8 +9,40 @@
 {% endblock %}
 
 {% block content %}
-    <div class = "cont">
-        <img class = "temp" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png">
-        <button class = "btn">Вкл/Выкл</button>
+    <img class = "temp" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png">
+    <button class = "btn">Вкл/Выкл</button>
+    <div class = "temp_now">
+        <h2 style = "display: inline; top: -30px; position: absolute;">Температура:</h2>
+        <h2 style = "top: -30px; right: 25px; display: inline;position: absolute;">25°C</h2>
     </div>
+<table class = "table">
+  <colgroup>
+    <col span = "2" style="height: 200px; background-color: C4C4C4; border: solid 1px black;"><!-- С помощью этой конструкции задаем цвет фона для первых двух столбцов таблицы-->
+    <col style="background-color: C4C4C4; border: solid 1px black;"><!-- Задаем цвет фона для следующего (одного) столбца таблицы-->
+  </colgroup>
+  <tr>
+    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ</th>
+    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 0 30px 0 0;">ТЕМПЕРАТУРА</th>
+  </tr>
+  <tr>
+    <td class = "item">10:00</td>
+    <td class = "item">22°C</td>
+  </tr>
+  <tr>
+    <td class = "item">11:00</td>
+    <td class = "item">20°C</td>
+  </tr>
+    <tr>
+    <td class = "item">12:00</td>
+    <td class = "item">23°C</td>
+  </tr>
+    <tr>
+    <td class = "item">12:25</td>
+    <td class = "item">24°C</td>
+  </tr>
+    <tr>
+    <td class = "item">13:00</td>
+    <td class = "item">25°C</td>
+  </tr>
+</table>
 {% endblock %}
