--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -24,25 +24,28 @@
     <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ</th>
     <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 0 30px 0 0;">ТЕМПЕРАТУРА</th>
   </tr>
+    {% csrf_token %}
+  {% for trm in izm %}
   <tr>
     <td class = "item">10:00</td>
-    <td class = "item">22°C</td>
+    <td class = "item">{{ izm.izm1 }}</td>
   </tr>
   <tr>
     <td class = "item">11:00</td>
-    <td class = "item">20°C</td>
+    <td class = "item">{{ izm.izm2 }}</td>
   </tr>
     <tr>
     <td class = "item">12:00</td>
-    <td class = "item">23°C</td>
+    <td class = "item">{{ izm.izm3 }}</td>
   </tr>
     <tr>
     <td class = "item">12:25</td>
-    <td class = "item">24°C</td>
+    <td class = "item">{{ izm.izm4 }}</td>
   </tr>
     <tr>
     <td class = "item">13:00</td>
-    <td class = "item">25°C</td>
+    <td class = "item">{{ izm.izm5 }}</td>
   </tr>
+  {% endif %}
 </table>
 {% endblock %}
