--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -46,6 +46,6 @@
     <td class = "item">13:00</td>
     <td class = "item">{{ izm.izm5 }}</td>
   </tr>
-  {% endif %}
+  {% endfor %}
 </table>
 {% endblock %}
