--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -14,35 +14,24 @@
     <div class = "temp_now">
         <h2 style = "display: inline; top: -30px; position: absolute;">Температура:</h2>
         <h2 style = "top: -30px; right: 25px; display: inline;position: absolute;">25°C</h2>
+        <form method = post>
+            <button style = "cursor: pointer; position: absolute; width: 100%; height: 100%; top: 0; left: 0; border-radius: 30px; opacity: 0;"></button>
+        </form>
     </div>
 <table class = "table">
   <colgroup>
-    <col span = "2" style="height: 200px; background-color: C4C4C4; border: solid 1px black;"><!-- С помощью этой конструкции задаем цвет фона для первых двух столбцов таблицы-->
-    <col style="background-color: C4C4C4; border: solid 1px black;"><!-- Задаем цвет фона для следующего (одного) столбца таблицы-->
+    <col span = "2" style="height: 200px; background-color: C4C4C4; border: solid 1px black;">
+    <col style="background-color: C4C4C4; border: solid 1px black;">
+      <tr>
+        <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ</th>
+        <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 0 30px 0 0;">ТЕМПЕРАТУРА</th>
+      </tr>
   </colgroup>
-  <tr>
-    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ</th>
-    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 0 30px 0 0;">ТЕМПЕРАТУРА</th>
-  </tr>
-  <tr>
-    <td class = "item">10:00</td>
-    <td class = "item">22°C</td>
-  </tr>
-  <tr>
-    <td class = "item">11:00</td>
-    <td class = "item">20°C</td>
-  </tr>
-    <tr>
-    <td class = "item">12:00</td>
-    <td class = "item">23°C</td>
-  </tr>
-    <tr>
-    <td class = "item">12:25</td>
-    <td class = "item">24°C</td>
-  </tr>
-    <tr>
-    <td class = "item">13:00</td>
-    <td class = "item">25°C</td>
-  </tr>
+    {% for el in Table %}
+          <tr>
+            <td class = "item">{{ el.time }}</td>
+            <td class = "item">{{ el.temp }}°C</td>
+          </tr>
+    {% endfor %}
 </table>
 {% endblock %}
