--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Smart Home</title>
-</head>
+    </head>
 <body>
     <header class = "nav_bar">
         {% block header %}
         {% endblock %}
     </header>
-    <div style = "position: fixed; width: 100%; height: 100%; margin: -8px; padding: 0; overflow-y: auto;">
+    <div>
         {% block content %}
         {% endblock %}
     </div>
