--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Smart Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-</head>
+    </head>
 <body>
     <header class = "nav_bar">
         {% block header %}
         {% endblock %}
     </header>
-    {% block content %}
-    {% endblock %}
-{% block f %}
-{% endblock %}
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
