--- a/smarthome_kvant/remote_control/static/CSS/style.css
+++ b/smarthome_kvant/remote_control/static/CSS/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -21,8 +21,22 @@ body{
     top: calc(50% - 40px);
 }
 
+.home_btn{
+    background-color: #1976D2;
+    height: 50px;
+    width: 150px;
+    top: 30%;
+    margin-left: 40px;
+    position: absolute;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+}
+
 .temperature {
-    cursor: pointer;
+    cursor: default;
     outline: none;
     border: 1px solid black;
     border-radius: 30px;
