--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -1,13 +1,42 @@
-<link rel="stylesheet" href="/static/CSS/style.css">
+<link rel="stylesheet" href="/static/CSS/st.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
-    <h2 style="vertical-align: middle; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
+    <button class = "home_btn">На главную</button>
+    <form method = "post" style = "position: absolute; left: 225px; top: 30px;">
+        {% csrf_token %}
+        <button name = "add" class = "add_led"><h7>Добавить лампочку</h7></button>
+    </form>
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
 {% block content %}
-    <a href = "{% url 'led_1_site' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-    <a href="{% url 'temp_site' %}" class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
-    <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+    <script>
+        if ( window.history.replaceState ) {
+            window.history.replaceState( null, null, window.location.href );
+        }
+    </script>
+<br><br>
+<br><br>
+    {% if user.is_authenticated %}
+     <h2 style="text-align: center;">Привет {{ user.username }}!</h2>
+     <h5 style="text-align: center;"><a href="{% url 'logout' %}">Выйти</a></h5>
+    {% else %}
+    {% endif %}
+    <div class="container">
+        <div class = "row" style = "margin-top: 50px; text-align: center;">
+            <div class="col-xl col-md">
+            <a href = "{% url 'led_1' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+            </div>
+            <div class="col-xl col-md">
+                <a href = "{% url 'termometr' %}" class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
+            </div>
+            <div class="col-xl col-md">
+                <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
