--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -21,7 +21,7 @@
     <col style="background-color: C4C4C4; border: solid 1px black;"><!-- Задаем цвет фона для следующего (одного) столбца таблицы-->
   </colgroup>
   <tr>
-    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ</th>
+    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;">ВРЕМЯ{{ color1 }}</th>
     <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 0 30px 0 0;">ТЕМПЕРАТУРА</th>
   </tr>
     {% csrf_token %}
