--- a/smarthome_kvant/remote_control/templates/rgb_lamp.html
+++ b/smarthome_kvant/remote_control/templates/rgb_lamp.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/CSS/termometr.css">
+<link rel="stylesheet" href="/static/CSS/rgb.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
@@ -9,15 +9,30 @@
 {% endblock %}
 
 {% block content %}
-    <img class = "temp" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png">
-    <button class = "btn">Вкл/Выкл</button>
+{% csrf_token %}
+    <img class = "rgb_img" src = "https://ledpremium.ru/upload/resize_cache/iblock/626/650_650_26a9cdfeb475445909b854c588a1af844/a_865548.jpg">
+   <form class = "icp" method="POST" action ="create/">
+       {% csrf_token %}
+        <p>
+            <label>Введите R</label><br>
+            <input type="number" name="r" />
+        </p>
+        <p>
+            <label>Введите G</label><br>
+            <input type="number" name="g" />
+        </p>
+       <p>
+            <label>Введите B</label><br>
+            <input type="number" name="b" />
+        </p>
+        <input type="submit" class = "btn" type="submit" value="Сохранить"></input>
+   </form>
 <table class = "table">
-    {% csrf_token %}
   <colgroup>
-    <col span = "2" style="height: 200px; background-color: {{ color1 }}; border: solid 1px black;"><!-- С помощью этой конструкции задаем цвет фона для первых двух столбцов таблицы-->
+    <col span = "2" style="height: 200px; background-color: rgb({{ r }}, {{ g }}, {{ b }}); "><!-- С помощью этой конструкции задаем цвет фона для первых двух столбцов таблицы-->
   </colgroup>
   <tr>
-    <th style = "font-size: 30px; text-align: center; height: 75px; border-radius: 30px 0 0 0;"></th>
+    <th style = "font-size: 30px; background-color: {{ color1 }}; text-align: center; height: 75px;"></th>
   </tr>
 </table>
 {% endblock %}
