--- a/smarthome_kvant/remote_control/static/CSS/Style.css
+++ b/smarthome_kvant/remote_control/static/CSS/Style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .temperature {
-    cursor: default;
+    cursor: pointer;
     outline: none;
     border: 1px solid black;
     border-radius: 30px;
@@ -49,6 +49,7 @@ body {
     right: 0;
     padding: 10px;
     margin: auto;
+    margin-left: calc(50% - 360px);
 }
 
 .led_1 {
@@ -65,7 +66,7 @@ body {
     right: 0;
     padding: 10px;
     margin: auto;
-    margin-left: calc(25% - 200px);
+    margin-left: calc(25% - 300px);
 }
 
 .led_2 {
@@ -82,5 +83,22 @@ body {
     right: 0;
     padding: 10px;
     margin: auto;
-    margin-left: calc(75% - 75px);
+    margin-left: calc(53%);
+}
+
+.rgb {
+    cursor: pointer;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 30px;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    margin: auto;
+    margin-left: calc(75%);
 }
