--- a/smarthome_kvant/remote_control/templates/rgb_lamp.html
+++ b/smarthome_kvant/remote_control/templates/rgb_lamp.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 {% csrf_token %}
-    <img class = "rgb_img" src = "https://ledpremium.ru/upload/resize_cache/iblock/626/650_650_26a9cdfeb475445909b854c588a1af844/a_865548.jpg">
+    <img class = "rgb_img" src = "https://lh3.googleusercontent.com/proxy/S_uiNIWgLrjTZwpdL1-K9XaqYXTCYVvfHTEE-6rqLwlgLV492nagYcSE3CS82wwnoPwNA_y6UMBRIP6vOSkuY05hCw1FFm6fNgk1GSU">
    <form class = "icp" method="POST" action ="create/">
        {% csrf_token %}
         <p>
