--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -12,5 +12,5 @@
     <a href = "{% url 'led_1' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
     <a href = "{% url 'termometr' %}" class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
     <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-    <a href = "{% url 'rgb' %}" class = "rgb"><img style = "width: 250px; height: 250px;" src = "https://ledpremium.ru/upload/resize_cache/iblock/626/650_650_26a9cdfeb475445909b854c588a1af844/a_865548.jpg"></a>
+    <a href = "{% url 'rgb' %}" class = "rgb"><img style = "width: 250px; height: 250px;" src = "https://lh3.googleusercontent.com/proxy/S_uiNIWgLrjTZwpdL1-K9XaqYXTCYVvfHTEE-6rqLwlgLV492nagYcSE3CS82wwnoPwNA_y6UMBRIP6vOSkuY05hCw1FFm6fNgk1GSU"></a>
 {% endblock %}
