--- a/smarthome_kvant/remote_control/static/CSS/Led_1.css
+++ b/smarthome_kvant/remote_control/static/CSS/Led_1.css
@@ -64,13 +64,20 @@ body {
 }
 
 .pos{
-    width: 250px;
+    width: 500px;
     height: 100px;
     position: absolute;
-    top: 400px;
+    top: 425px;
     bottom: 0;
     left: 0;
     right: 0;
     padding: 10px;
     margin: auto;
+    font-size: 40px;
+}
+
+.name{
+    margin-top: 160px;
+    margin-left: 20px;
+    font-size: 35px;
 }
