--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -1,15 +1,11 @@
-<link rel="stylesheet" href="/static/CSS/st.css">
+<link rel="stylesheet" href="/static/CSS/Style.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
-    <button class = "home_btn">На главную</button>
-    <form method = "post" style = "position: absolute; left: 225px; top: 30px;">
-        {% csrf_token %}
-        <button name = "add" class = "add_led"><h7>Добавить лампочку</h7></button>
-    </form>
+    <button name = "add" class = "add_led" onclick = "ShowAddForm()"><h7>Добавить лампочку</h7></button>
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
@@ -18,18 +14,25 @@
         if ( window.history.replaceState ) {
             window.history.replaceState( null, null, window.location.href );
         }
+
+        function ShowAddForm(){
+            console.log(1);
+        }
     </script>
+    <form method = "post" class = "AddForm">
+        {% csrf_token %}
+    </form>
     <div class="container">
         <div class = "row" style = "margin-top: 250px; text-align: center;">
             <div class="col-xl col-md">
-            <a href = "{% url 'led_1' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-            </div>
-            <div class="col-xl col-md">
                 <a href = "{% url 'termometr' %}" class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
             </div>
-            <div class="col-xl col-md">
-                <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-            </div>
+            {% for data in Names %}
+                <div class="col-xl col-md">
+                    <a href = "http://127.0.0.1:8000/led/{{ data.number }}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+                    <h2 style = "text-align: center; align-items: center">{{ data.name }}</h2>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
