--- a/smarthome_kvant/remote_control/static/CSS/space.css
+++ b/smarthome_kvant/remote_control/static/CSS/space.css
@@ -51,9 +51,8 @@ body {
 }
 
 .add_led{
-    cursor: pointer;
-    outline: none;
     border: none;
+    cursor: pointer;
     background-color: #1976D2;
     color: white;
     padding: 10px 20px 10px 20px;
@@ -62,15 +61,22 @@ body {
     font-size: 20px;
 }
 
-.AddForm{
-    border-radius: 30px;
-    border: solid 1px
+#AddForm{
+    background-color: white;
     width: 50%;
     height: 500px;
-    z-index: 10;
-    transition: 1s;
-    top: 0px;
+    top: -500px;
     margin-left: 25%;
+    z-index: 100;
     position: fixed;
-    background-color: black;
+    border: 2px solid #2196F3;
+    border-radius: 30px;
+    transition: linear 0.3s;
+}
+
+.Instruction{
+    padding-top: 30px;
+    font-size: 40px;
+    width: 400px;
+    margin: 0 auto;
 }
