--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -4,8 +4,15 @@
 {% block header %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
+    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;"><a style="text-decoration: none; color: white" href = "{% url 'home' %}">Smart Home</a></h2>
     <button name = "add" class = "add_led" onclick = "ShowAddForm()"><h7>Добавить лампочку</h7></button>
+    <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'signup' %}">Регистрация</a></button>
+    <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'login' %}">Вход</a></button>
+    {% if user.is_authenticated %}
+         <h2 style="text-align: right; margin-top: -40px; margin-right: 200px; color: white">{{ user.username }}</h2>
+         <h6 style="text-align: right; margin-top: -20px; margin-right: 140px"><a style="color: black;" href="{% url 'logout' %}">Выйти</a></h6>
+        {% else %}
+    {% endif %}
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
