--- a/smarthome_kvant/remote_control/templates/Led_1.html
+++ b/smarthome_kvant/remote_control/templates/Led_1.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/CSS/space.css">
+<link rel="stylesheet" href="/static/CSS/copy_led.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
