--- a/smarthome_kvant/remote_control/templates/base.html
+++ b/smarthome_kvant/remote_control/templates/base.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Smart Home</title>
-    </head>
+</head>
 <body>
-    <header class = "nav_bar">
+    <header class = "nav_bar" style = "height: 100px;">
         {% block header %}
         {% endblock %}
     </header>
