--- a/smarthome_kvant/remote_control/static/CSS/led.css
+++ b/smarthome_kvant/remote_control/static/CSS/led.css
@@ -7,7 +7,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    line-height: 500%;
+    height: 100px;
     background-color: #2196F3;
     font-size: 1em;
 }
@@ -36,7 +36,7 @@ body {
 }
 
 .Led{
-    width: 250px;
+    width: 175px;
     height: 250px;
     position: absolute;
     top: -100px;
@@ -64,7 +64,7 @@ body {
 }
 
 .pos{
-    width: 500px;
+    width: 550px;
     height: 100px;
     position: absolute;
     top: 425px;
@@ -78,6 +78,6 @@ body {
 
 .name{
     margin-top: 160px;
-    margin-left: 20px;
+    margin-left: 0px;
     font-size: 35px;
 }
