--- a/smarthome_kvant/remote_control/templates/Led_1.html
+++ b/smarthome_kvant/remote_control/templates/Led_1.html
@@ -1,10 +1,15 @@
-<link rel="stylesheet" href="/static/CSS/Led_1.css">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/static/CSS/copy_led.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
-    <h2 style="vertical-align: middle; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
-    <button class = "home_btn">На главную</button>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;"><a style="text-decoration: none; color: white" href = "{% url 'home' %}">Smart Home</a></h2>
+    {% if user.is_authenticated %}
+         <h2 style="text-align: right; margin-top: -42px; margin-right: 200px; color: white">{{ user.username }}</h2>
+         <h6 style="text-align: right; margin-top: -20px; margin-right: 140px"><a style="color: black;" href="{% url 'logout' %}">Выйти</a></h6>
+        {% else %}
+    {% endif %}
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
@@ -15,9 +20,10 @@
         }
     </script>
     <img class = "Led" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png">
-    <form method="post">
+    <form method="post" style = "align-items: center; text-align: center;">
         {% csrf_token %}
-        <button class = "btn" name="dispatch" type="Submit">Вкл/Выкл</button>
-        <h2 class = "pos">{{ led_pos }}</h2>
+        <h2 class = "name">{{ name }}</h2>
+        <button class = "butn" name="dispatch" type="Submit">Вкл/Выкл</button>
+        <h2 class = "pos">{{ pos }}</h2>
     </form>
 {% endblock %}
