--- a/smarthome_kvant/remote_control/templates/Termometr.html
+++ b/smarthome_kvant/remote_control/templates/Termometr.html
@@ -1,21 +1,34 @@
-<link rel="stylesheet" href="/static/CSS/termometr.css">
+<link rel="stylesheet" href="/static/CSS/copy_termometr.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <h2 style="vertical-align: middle; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
-    <button class = "home_btn">На главную</button>
+    <h2 style="font-size: 32px; margin-top: 10px; display: inline-block; padding-left: 40px; color: white;"><a style="text-decoration: none; color: white" href = "{% url 'home' %}">Smart Home</a></h2>
+    {% if user.is_authenticated %}
+         <h2 style="font-size: 30px; text-align: right; margin-top: -101px; margin-right: 200px; color: white">{{ user.username }}</h2>
+         <h6 style="font-size: 15px; text-align: right; margin-top: -88px; margin-right: 140px"><a style="color: black; text-decoration: none;" href="{% url 'logout' %}">Выйти</a></h6>
+        {% else %}
+    {% endif %}
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
 {% block content %}
+    <script>
+        if ( window.history.replaceState ) {
+            window.history.replaceState( null, null, window.location.href );
+        }
+    </script>
     <img class = "temp" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png">
-    <button class = "btn">Вкл/Выкл</button>
+    <form method = post>
+        {% csrf_token %}
+        <button class = "butn" name = "change_pos">Вкл/Выкл</button>
+    </form>
     <div class = "temp_now">
         <h2 style = "display: inline; top: -30px; position: absolute;">Температура:</h2>
         <h2 style = "top: -30px; right: 25px; display: inline;position: absolute;">25°C</h2>
         <form method = post>
-            <button style = "cursor: pointer; position: absolute; width: 100%; height: 100%; top: 0; left: 0; border-radius: 30px; opacity: 0;"></button>
+            {% csrf_token %}
+            <button name = 'Temp' style = "cursor: pointer; position: absolute; width: 100%; height: 100%; top: 0; left: 0; border-radius: 30px; opacity: 0;"></button>
         </form>
     </div>
 <table class = "table">
