--- a/smarthome_kvant/remote_control/templates/index.html
+++ b/smarthome_kvant/remote_control/templates/index.html
@@ -1,15 +1,18 @@
-<link rel="stylesheet" href="/static/CSS/st.css">
+<link rel="stylesheet" href="/static/CSS/trush.css">
 {% extends 'base.html' %}
 {% load static %}
 {% block header %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;">Smart Home</h2>
-    <button class = "home_btn">На главную</button>
-    <form method = "post" style = "position: absolute; left: 225px; top: 30px;">
-        {% csrf_token %}
-        <button name = "add" class = "add_led"><h7>Добавить лампочку</h7></button>
-    </form>
+    <h2 style="margin-top: 30px; display: inline-block; padding-left: 40px; color: white;"><a style="text-decoration: none; color: white" href = "{% url 'home' %}">Smart Home</a></h2>
+    <button name = "add" class = "add_led" onclick = "ShowAddForm()"><h7>Добавить лампочку</h7></button>
+    <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'signup' %}">Регистрация</a></button>
+    <button class = "add_led" style = "margin-left: 20px;"><a style="text-decoration: none; color: white" href = "{% url 'login' %}">Вход</a></button>
+    {% if user.is_authenticated %}
+         <h2 style="text-align: right; margin-top: -40px; margin-right: 200px; color: white">{{ user.username }}</h2>
+         <h6 style="text-align: right; margin-top: -20px; margin-right: 140px"><a style="color: black;" href="{% url 'logout' %}">Выйти</a></h6>
+        {% else %}
+    {% endif %}
     <img class = "image" src = "https://s.starladder.com/uploads/user_logo/e/2/f/e/f0d227746d98c02a794fcbf3b693cf8b.jpg">
 {% endblock %}
 
@@ -18,25 +21,31 @@
         if ( window.history.replaceState ) {
             window.history.replaceState( null, null, window.location.href );
         }
+        function ShowAddForm(){
+            var element = document.getElementById('AddForm');
+            element.style.top = '150px';
+        }
     </script>
-<br><br>
-<br><br>
-    {% if user.is_authenticated %}
-     <h2 style="text-align: center;">Привет {{ user.username }}!</h2>
-     <h5 style="text-align: center;"><a href="{% url 'logout' %}">Выйти</a></h5>
-    {% else %}
-    {% endif %}
+    <form method = "post" id = "AddForm">
+        {% csrf_token %}
+        <h2 class = "Instruction">Название для лампы</h2>
+        <div class = "form-control" style = "border: none; height: 50px; margin-top: 20px;">
+            {{ Form.add_name }}
+        </div>
+        <button class = "btn" name="Add" type="Submit" style = "background-color: #1976D2; border-radius: 30px;color: white;font-size: 30px;">Добавить лампу</button>
+    </form>
     <div class="container">
-        <div class = "row" style = "margin-top: 50px; text-align: center;">
-            <div class="col-xl col-md">
-            <a href = "{% url 'led_1' %}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-            </div>
-            <div class="col-xl col-md">
+        <div class = "row" style = "margin-top: 150px; text-align: center;">
+            <div class="col-xl-4 col-md-4" style="padding: 30px;">
                 <a href = "{% url 'termometr' %}" class = "temperature"><img style = "width: 250px; height: 250px;" src = "https://i.exclipart.com/images/thermometer-icon-png-2.png"></a>
             </div>
-            <div class="col-xl col-md">
-                <a class = "led_2"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
-            </div>
+            <a href = "{% url 'rgb' %}" class = "rgb"><img style = "width: 250px; height: 250px;" src = "https://elquanta.ru/wp-content/uploads/2018/04/1.lenta-rgb.jpg"></a>
+            {% for data in Names %}
+                <div class="col-xl-4 col-md-4" style = "padding: 30px;">
+                    <a href = "http://127.0.0.1:8000/led/{{ data.number }}" class = "led_1"><img style = "width: 250px; height: 250px;" src = "https://clipart-best.com/img/lamp/lamp-clip-art-24.png"></a>
+                    <h2 style = "text-align: center; align-items: center">{{ data.name }}</h2>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
