--- a/smarthome_kvant/remote_control/templates/signup.html
+++ b/smarthome_kvant/remote_control/templates/signup.html
@@ -1,5 +1,6 @@
 {% extends 'index.html' %}
-
+{% load account socialaccount %}
+{% get_providers as socialaccount_providers %}
 {% block content %}
 <br><br><br><br>
 <h2>Регистрация</h2>
@@ -7,6 +8,8 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">рег</button>
+  <button type="submit">Войти</button>
+  <a href={% provider_login_url "vk" method="oauth2" %}> Войти через VK </a>
+
 </form>
 {% endblock content %}
